Bug 761287 - Fix NDKr8 build by including Android sigcontext instead of using our own; r=ehsan